moving on to EDA

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ timestamps*/
 data*/
 pretrained*/
 lgb*/
+.learning_equality
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
